t/test-data/Models/validation/Test/SubModule.nhd
*** general ***

author   = Jonathan Worthington
date     = 2021-06-09
taxonomy = Test::SubModule
instances = multi

+short

  For testing validation

+description

  Multi instance test sub module.

*** input ***

+a_natural
  type = integer
  validator = gt(0)
  ++labels
    en = Natural
  ++units
    en = -

*** external ***

+SubModule::SubTest

*** output ***

+a_natural
  print = 7
  ++units
    en = monkeys/hour
  ++formula
    In(a_natural)
  ++description
    Final result
